--- a/dwh-update/src/main/scripts/generic/aktin.properties
+++ b/dwh-update/src/main/scripts/generic/aktin.properties
@@ -10,7 +10,8 @@ local.l=Beispielhausen
 local.s=Niedersachen
 # Country / Staat
 local.c=Deutschland
-# default E-Mail-Address for notifications, reports (non technical); multiple Adresses possible (comma separated in one line)
+# default E-Mail-Address for notifications, reports (non technical)
+# multiple Adresses possible (comma separated in one line)
 local.email=zna-contact@klinikum-beipielhausen.de
 local.tz=Europe/Berlin
 # Language tag according to IETF BCP 47. If not defined, the system language will be used.
