aktin properties fix

--- a/dwh-update/src/main/scripts/generic/aktin.properties
+++ b/dwh-update/src/main/scripts/generic/aktin.properties
@@ -10,7 +10,7 @@ local.l=Beispielhausen
 local.s=Niedersachen
 # Country / Staat
 local.c=Deutschland
-# default E-Mail-Address for notifications, reports (non technical)
+# default E-Mail-Address for notifications, reports (non technical); multiple Adresses possible (comma separated in one line)
 # multiple Adresses possible (comma separated in one line)
 local.email=zna-contact@klinikum-beipielhausen.de
 local.tz=Europe/Berlin
