--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -6,19 +6,19 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-update</artifactId>
-	<version>0.8.2-SNAPSHOT</version>
+	<version>0.9-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>0.8.2-SNAPSHOT</version>
+		<version>0.9-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.aktin.dwh</groupId>
 			<artifactId>dwh-j2ee</artifactId>
-			<version>0.8</version>
+			<version>0.9rc1</version>
 			<type>ear</type>
 		</dependency>
 		<dependency>
