--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.aktin.dwh</groupId>
 			<artifactId>dwh-j2ee</artifactId>
-			<version>0.9</version>
+			<version>0.10-SNAPSHOT</version>
 			<type>ear</type>
 		</dependency>
 		<dependency>
