--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -6,12 +6,12 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-update</artifactId>
-	<version>0.10rc1</version>
+	<version>0.10rc2-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>0.10rc1</version>
+		<version>0.10rc2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
