Prefs for consent manager added.

--- a/dwh-update/src/main/scripts/generic/aktin.properties
+++ b/dwh-update/src/main/scripts/generic/aktin.properties
@@ -39,3 +39,15 @@ email.replyto=it-support@aktin.org
 wildfly.management.url=http://localhost:19990/management
 wildfly.management.user=admin
 wildfly.management.password=admin2
+# patient reference, allowed values: Patient, Encounter, Billing
+study.id.reference=Patient
+# Root numbers of the different reference types. Can be empty.
+cda.patient.root.preset=1.2.276.0.76.4.8
+cda.encounter.root.preset=1.2.276.0.76.4.8
+cda.billing.root.preset=1.2.276.0.76.4.8
+# Label for the extension textfield of the consent manager, based on the reference type.
+study.id.patient.label=Patientennr.
+study.id.encounter.label=Episodennummer
+study.id.billing.label=Fallnummer
+# Character for separating root and extension in case they both have to  be set manually. Is applied if root is not set in properties.
+study.id.separator=/
