--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,12 @@
 			<dependency>
 			    <groupId>org.aktin</groupId>
 			    <artifactId>cda-ontology</artifactId>
-			    <version>0.12</version>
+			    <version>0.13-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.aktin.dwh</groupId>
 				<artifactId>dwh-j2ee</artifactId>
-				<version>1.0.2</version>
+				<version>1.0.3-SNAPSHOT</version>
 				<type>ear</type>
 			</dependency>
 		</dependencies>
