--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 	<properties>
 		<!-- specifies the package and source version to which the scripts and site refers to -->
 		<!-- dont forget to change dependency further down and in dwh-update/pom.xml -->
-		<dwhJ2EEVersion>1.0.2</dwhJ2EEVersion>
-		<dwhOntologyVersion>0.12</dwhOntologyVersion>
-		<dwhImportVersion>0.12</dwhImportVersion>
+		<dwhJ2EEVersion>1.1rc1</dwhJ2EEVersion>
+		<dwhOntologyVersion>0.13</dwhOntologyVersion>
+		<dwhImportVersion>0.13</dwhImportVersion>
 		<releaseRepoUrl>http://www.aktin.org/software/repo</releaseRepoUrl>
 		<!-- encoding stuff -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
