Added properties and fixed update script.

--- a/dwh-update/src/main/scripts/generic/aktin.properties
+++ b/dwh-update/src/main/scripts/generic/aktin.properties
@@ -27,6 +27,7 @@ i2b2.service.domain=i2b2demo
 report.data.path=/var/lib/aktin/reports
 report.temp.path=/var/tmp/report-temp
 report.archive.path=/var/lib/aktin/report-archive
+report.debug.keeptempfiles=false
 broker.data.path=/var/lib/aktin/broker
 broker.archive.path=/var/lib/aktin/broker-archive
 broker.uris=https://broker.aktin.org/broker/
@@ -51,5 +52,7 @@ study.id.encounter.label=Episodennummer
 study.id.billing.label=Fallnummer
 # Character for separating root and extension in case they both have to  be set manually. Is applied if root is not set in properties.
 study.id.separator=/
-#Durch Auskommentieren wird die Log-Funktion für importierte CDAs aktiviert - d.h. alle importierten CDAs werden zusätzlich als Datei abgelegt.
-#import.cda.debug.dir=/var/log/wildfly
+# Log-Funktion für importierte CDAs: Alle importierten CDAs werden zusaetzlich als Datei abgelegt (Werte: all, info oder none)
+import.cda.debug.dir=/tmp/
+import.cda.debug.level=none
+import.cda.fhir.outcome.level=info
