Changed encoding to utf-8.

--- a/dwh-update/src/main/scripts/generic/aktin.properties
+++ b/dwh-update/src/main/scripts/generic/aktin.properties
@@ -52,7 +52,7 @@ study.id.encounter.label=Episodennummer
 study.id.billing.label=Fallnummer
 # Character for separating root and extension in case they both have to  be set manually. Is applied if root is not set in properties.
 study.id.separator=/
-# Log-Funktion für importierte CDAs: Alle importierten CDAs werden zusaetzlich als Datei abgelegt (Werte: all, info oder none)
+# Log-Funktion fuer importierte CDAs: Alle importierten CDAs werden zusaetzlich als Datei abgelegt (Werte: all, info oder none)
 import.cda.debug.dir=/tmp/
 import.cda.debug.level=none
 import.cda.fhir.outcome.level=info
