--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 			<dependency>
 				<groupId>org.aktin.dwh</groupId>
 				<artifactId>dwh-j2ee</artifactId>
-				<version>1.0.3-SNAPSHOT</version>
+				<version>1.1rc1</version>
 				<type>ear</type>
 			</dependency>
 		</dependencies>
