--- a/dwh-update/src/main/scripts/generic/aktin.properties
+++ b/dwh-update/src/main/scripts/generic/aktin.properties
@@ -30,7 +30,7 @@ report.archive.path=/var/lib/aktin/report-archive
 report.debug.keeptempfiles=false
 broker.data.path=/var/lib/aktin/broker
 broker.archive.path=/var/lib/aktin/broker-archive
-broker.uris=https://broker.aktin.org/broker/
+broker.uris=https://aktin-broker.klinikum.rwth-aachen.de/broker/
 broker.intervals=PT15M
 # Used in AKTIN to connect to the broker, you can get your API key from it-support@aktin.org
 broker.keys=XXXyourapikeyXXX
