--- a/dwh-install/pom.xml
+++ b/dwh-install/pom.xml
@@ -7,19 +7,19 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-install</artifactId>
-	<version>1.2-SNAPSHOT</version>
+	<version>1.1u4</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>1.2-SNAPSHOT</version>
+		<version>1.1u4</version>
 	</parent>
 	
 	<dependencies>
 		<dependency>
 			<groupId>org.aktin.dwh</groupId>
 			<artifactId>dwh-update</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>1.1u4</version>
 			<type>tar.gz</type>
 			<exclusions>
 				<!-- already bundled/included with the update -->
