added stuff to .gitignore added own stuff to readme, TODO: refactor

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,34 @@ dwh-install/temp/
 *.iso
 *.pub
 *.pkcs8
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Logs and databases #
+######################
+*.log
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Cached files #
+######################
+~$*
+
+#IntelliJ #
+######################
 .idea
