--- a/dwh-update/src/assembly/package.xml
+++ b/dwh-update/src/assembly/package.xml
@@ -20,16 +20,12 @@
 
     <fileSets>
         <fileSet>
-            <directory>${project.build.scriptSourceDirectory}</directory>
+            <directory>src/main/scripts/generic</directory>
             <outputDirectory>dwh-update</outputDirectory>
             <filtered>true</filtered>
             <fileMode>755</fileMode>
             <lineEnding>unix</lineEnding>
         </fileSet>
-        <fileSet>
-            <directory>src/main/resources</directory>
-            <outputDirectory>dwh-update</outputDirectory>
-            <filtered>false</filtered>
-        </fileSet>
     </fileSets>
+
 </assembly>
