--- a/pom.xml
+++ b/pom.xml
@@ -24,18 +24,33 @@
 		<releaseRepoUrl>http://www.aktin.org/software/repo</releaseRepoUrl>
 
 		<!-- version number to use in scripts -->
-		<java.version>11</java.version>
-		<wildfly.version>18.0.0.Final</wildfly.version>
-		<postgresql.version>12</postgresql.version>
-		<jdbc.driver.version>42.2.8</jdbc.driver.version>
-		<i2b2.version>1.7.12a</i2b2.version>
-		<php.version>7.3</php.version>
-		<python.version>3.8</python.version>
-		<r.version>3.6.3</r.version>
+		<version.java>11</version.java>
+		<version.wildfly>18.0.0.Final</version.wildfly>
+		<version.postgresql>12</version.postgresql>
+		<version.jdbc.driver>42.2.8</version.jdbc.driver>
+		<version.i2b2>1.7.12a</version.i2b2>
+		<version.php>7.3</version.php>
+		<version.python>3.8</version.python>
+		<version.r>3.6.3</version.r>
 
 		<!-- pathing to use in scripts -->
-		<install.destination>/opt</install.destination>
-		
+		<path.install.destination>/opt</path.install.destination>
+		<path.install.link>${path.install.destination}/link_installer</path.install.link>
+		<path.log.folder>${path.install.destination}/aktin_log</path.log.folder>
+
+		<!-- urls for packages -->
+		<url.i2b2.webclient>https://github.com/i2b2/i2b2-webclient/archive/v${version.i2b2}.0002.zip</url.i2b2.webclient>
+		<url.wildfly>https://download.jboss.org/wildfly/${version.wildfly}/wildfly-${version.wildfly}.zip</url.wildfly>
+		<url.jdbc.driver>https://jdbc.postgresql.org/download/postgresql-${version.jdbc.driver}.jar</url.jdbc.driver>
+
+
+		<!-- colors for bash scripting -->
+		<color.white>'\033[0m'</color.white>
+		<color.red>'\e[1;31m'</color.red>
+		<color.orange>'\e[0;33m'</color.orange>
+		<color.yellow>'\e[1;33m'</color.yellow>
+		<color.green>'\e[0;32m'</color.green>
+
 
 		<!-- encoding stuff -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
