--- a/dwh-update/src/assembly/package.xml
+++ b/dwh-update/src/assembly/package.xml
@@ -20,11 +20,14 @@
 
     <fileSets>
         <fileSet>
-            <directory>src/main/scripts/generic</directory>
-            <outputDirectory>dwh-update</outputDirectory>
+            <directory>${project.build.scriptSourceDirectory}</directory>
+            <outputDirectory>/dwh-update</outputDirectory>
             <filtered>true</filtered>
-            <fileMode>755</fileMode>
-            <lineEnding>unix</lineEnding>
+        </fileSet>
+        <fileSet>
+            <directory>src/main/resources</directory>
+            <outputDirectory>/dwh-update</outputDirectory>
+            <filtered>false</filtered>
         </fileSet>
     </fileSets>
 
