--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -42,7 +42,7 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>debian-update-assambly</id>
+						<id>aktin-dwh-update-assembly</id>
 						<phase>package</phase>
 						<goals>
 							<goal>single</goal>
