fixed typos, fixed bug in listing older .ear, added integration test, added folder structure and pom.xml to integration-test

--- a/dwh-integration-test/Dockerfile
+++ b/dwh-integration-test/Dockerfile
@@ -2,13 +2,10 @@ FROM ubuntu:20.04
 MAINTAINER "Alexander Kombeiz" <akombeiz@ukaachen.de>
 
 # copy everything in the same directory as this dockerfile into CONTAINER:/opt/
-COPY / /opt/
+COPY /target/dwh-integration-test-*.tar.gz /home/
 
-# run aktin installation script
-RUN cd /opt/ && ./aktin_install.sh
-
-# run integration test script
-RUN cd /opt/integration && ./test_integration.sh
+# add aktin integration test with aktin installation to /home
+RUN cd /home/ && tar -xvzf dwh-integration-test-*.tar.gz && cd dwh-integration-test && chmod +x aktin_integration_test.sh
 
 # open ports
 EXPOSE 80
