--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
 			<dependency>
 				<groupId>org.aktin.dwh</groupId>
 				<artifactId>dwh-j2ee</artifactId>
-				<version>1.1rc1</version>
+				<version>${dwhJ2EEVersion}</version>
 				<type>ear</type>
 			</dependency>
 		</dependencies>
