updated aktin.properties for new mail server

--- a/dwh-update/src/main/scripts/aktin.properties
+++ b/dwh-update/src/main/scripts/aktin.properties
@@ -47,8 +47,6 @@ broker.intervals=PT15M
 # used in AKTIN to connect to the broker, you can get your API key from it-support@aktin.org
 broker.keys=XXXyourapikeyXXX
 db.datasource=java:jboss/datasources/AktinDS
-email.session=java:jboss/mail/AktinMailSession
-email.replyto=it-support@aktin.org
 wildfly.management.url=http://localhost:9990/management
 wildfly.management.user=admin
 wildfly.management.password=admin2
@@ -62,9 +60,9 @@ cda.encounter.root.preset=1.2.276.0.76.3.87686
 cda.billing.root.preset=1.2.276.0.76.3.87686.1.45
 
 # label for the extension textfield of the consent-manager, based on the reference type.
-study.id.patient.label=Patientennummer
-study.id.encounter.label=Episodennummer
-study.id.billing.label=Fallnummer
+study.id.patient.label=Patienten-ID
+study.id.encounter.label=Episoden-ID.
+study.id.billing.label=Abrechnungsnr.
 
 # character for separating root and extension in case of manual setting. Will be applied if root is not set in properties.
 study.id.separator=/
@@ -73,3 +71,22 @@ study.id.separator=/
 import.cda.debug.dir=/tmp/
 import.cda.debug.level=none
 import.cda.fhir.outcome.level=info
+
+# use only one field 'email.session' :
+# mail server via wildfly, uses email.config for configuration
+#email.session=java:jboss/mail/AktinMailSession
+
+# mail server via java, uses configuration below (only used if email.session=local)
+email.session=local
+
+# custom non-standard properties with mail.x.
+mail.user=userforssending
+mail.x.password=passwordforsending
+mail.x.replyto=it-support@aktin.org
+mail.transport.protocol=smtp
+mail.smtp.host=smtp.gmail.com
+mail.smtp.port=587
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.smtp.timeout=10000
+mail.smtp.connectiontimeout=10000
