fixed faulty reasoning in dwh-install/dwh-update

--- a/dwh-update/src/main/scripts/aktin.properties
+++ b/dwh-update/src/main/scripts/aktin.properties
@@ -80,6 +80,17 @@ import.cda.fhir.outcome.level=info
 email.session=local
 
 # custom non-standard properties with mail.x.
+#mail.user=userforssending
+#mail.x.password=passwordforsending
+#mail.x.replyto=it-support@aktin.org
+#mail.transport.protocol=smtp
+#mail.smtp.host=smtp.gmail.com
+#mail.smtp.port=587
+#mail.smtp.auth=true
+#mail.smtp.starttls.enable=true
+#mail.smtp.timeout=10000
+#mail.smtp.connectiontimeout=10000
+
 mail.user=userforssending
 mail.x.password=passwordforsending
 mail.x.replyto=it-support@aktin.org
