--- a/pom.xml
+++ b/pom.xml
@@ -24,28 +24,28 @@
 		<releaseRepoUrl>http://www.aktin.org/software/repo</releaseRepoUrl>
 
 		<!-- version number to use in scripts -->
-		<version.java>11</version.java>
-		<version.wildfly>18.0.0.Final</version.wildfly>
-		<version.postgresql>12</version.postgresql>
-		<version.jdbc.driver>42.2.8</version.jdbc.driver>
-		<version.apache2>2.4.41-4ubuntu3.1</version.apache2>
-		<version.i2b2>1.7.12a</version.i2b2>
-		<version.php>7.3</version.php>
-		<version.python>3.8</version.python>
-		<version.r>3.6.3-2</version.r>
-
+		<version_java>11</version_java>
+		<version_wildfly>18.0.0.Final</version_wildfly>
+		<version_postgresql>12</version_postgresql>
+		<version_jdbc_driver>42.2.8</version_jdbc_driver>
+		<version_apache2>2.4.41-4ubuntu3.1</version_apache2>
+		<version_i2b2>1.7.12a</version_i2b2>
+		<version_php>7.3</version_php>
+		<version_python>3.8</version_python>
+		<version_r>3.6.3-2</version_r>
+		
 		<!-- urls for packages -->
-		<url.i2b2.webclient>https://github.com/i2b2/i2b2-webclient/archive/v${version.i2b2}.0002.zip</url.i2b2.webclient>
-		<url.wildfly>https://download.jboss.org/wildfly/${version.wildfly}/wildfly-${version.wildfly}.zip</url.wildfly>
-		<url.jdbc.driver>https://jdbc.postgresql.org/download/postgresql-${version.jdbc.driver}.jar</url.jdbc.driver>
-		<url.i2b2.war>https://www.aktin.org/software/repo/org/i2b2/${version.i2b2}/i2b2.war</url.i2b2.war>
+		<url_i2b2_webclient>https://github.com/i2b2/i2b2-webclient/archive/v${version_i2b2}.0002.zip</url_i2b2_webclient>
+		<url_wildfly>https://download.jboss.org/wildfly/${version_wildfly}/wildfly-${version_wildfly}.zip</url_wildfly>
+		<url_jdbc_driver>https://jdbc.postgresql.org/download/postgresql-${version_jdbc_driver}.jar</url_jdbc_driver>
+		<url_i2b2_war>https://www.aktin.org/software/repo/org/i2b2/${version_i2b2}/i2b2.war</url_i2b2_war>
 
 		<!-- colors for bash scripting -->
-		<color.white>'\033[0m'</color.white>
-		<color.red>'\e[1;31m'</color.red>
-		<color.orange>'\e[0;33m'</color.orange>
-		<color.yellow>'\e[1;33m'</color.yellow>
-		<color.green>'\e[0;32m'</color.green>
+		<color_white>'\033[0m'</color_white>
+		<color_red>'\e[1;31m'</color_red>
+		<color_orange>'\e[0;33m'</color_orange>
+		<color_yellow>'\e[1;33m'</color_yellow>
+		<color_green>'\e[0;32m'</color_green>
 
 		<!-- encoding stuff -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -60,6 +60,7 @@
 	<modules>
 		<module>dwh-update</module>
 		<module>dwh-install</module>
+		<module>dwh-integration-test</module>
 		<!--
 		TODO fix ccd integration
 		<module>aktin-cdd</module>
