--- a/dwh-update/src/main/scripts/aktin.properties
+++ b/dwh-update/src/main/scripts/aktin.properties
@@ -60,9 +60,9 @@ cda.encounter.root.preset=1.2.276.0.76.3.87686
 cda.billing.root.preset=1.2.276.0.76.3.87686.1.45
 
 # label for the extension textfield of the consent-manager, based on the reference type.
-study.id.patient.label=Patienten-ID
-study.id.encounter.label=Episoden-ID.
-study.id.billing.label=Abrechnungsnr.
+study.id.patient.label=Patientennummer
+study.id.encounter.label=Episodennummer
+study.id.billing.label=Fallnummer
 
 # character for separating root and extension in case of manual setting. Will be applied if root is not set in properties.
 study.id.separator=/
@@ -72,32 +72,39 @@ import.cda.debug.dir=/tmp/
 import.cda.debug.level=none
 import.cda.fhir.outcome.level=info
 
+
+
 # use only one field 'email.session' :
+
 # mail server via wildfly, uses email.config for configuration
-#email.session=java:jboss/mail/AktinMailSession
+email.session=java:jboss/mail/AktinMailSession
+email.replyto=it-support@aktin.org
 
-# mail server via java, uses configuration below (only used if email.session=local)
-email.session=local
-
-# custom non-standard properties with mail.x.
-#mail.user=userforssending
-#mail.x.password=passwordforsending
-#mail.x.replyto=it-support@aktin.org
-#mail.transport.protocol=smtp
-#mail.smtp.host=smtp.gmail.com
-#mail.smtp.port=587
-#mail.smtp.auth=true
-#mail.smtp.starttls.enable=true
-#mail.smtp.timeout=10000
-#mail.smtp.connectiontimeout=10000
-
-mail.user=userforssending
-mail.x.password=passwordforsending
+# mail server via java, uses configuration below 
+# email.session=local
 mail.x.replyto=it-support@aktin.org
+
+# mail server protocol
 mail.transport.protocol=smtp
+
+# mail server name
 mail.smtp.host=smtp.gmail.com
+
+# mail server port, e.g. 465 (SSL) or 587 (TLS), or 25 (no auth)
 mail.smtp.port=587
+
+# mail server authentification, false for "no login is needed"
 mail.smtp.auth=true
+
+# user name for authentication
+mail.user=userforssending
+
+# password for authentication
+mail.x.password=passwordforsending
+
+#  security configuration
 mail.smtp.starttls.enable=true
+
+# connection timeout
 mail.smtp.timeout=10000
 mail.smtp.connectiontimeout=10000
