added systemd support for docker

--- a/dwh-integration-test/Dockerfile
+++ b/dwh-integration-test/Dockerfile
@@ -1,4 +1,10 @@
-FROM ubuntu:20.04
+#FROM ubuntu:20.04
+# run in console: docker run -it --privileged -p 81:80 -p 9090:9090 <NAME>:<TAG>
+
+FROM jrei/systemd-ubuntu:20.04
+#run  in console: docker run -d --privileged -p 81:80 -p 9090:9090 --tmpfs /tmp --tmpfs /run --tmpfs /run/lock -v /sys/fs/cgroup:/sys/fs/cgroup:ro <NAME>:<TAG>
+#after that: docker exec -it <ID> sh
+
 MAINTAINER "Alexander Kombeiz" <akombeiz@ukaachen.de>
 
 # copy everything in the same directory as this dockerfile into CONTAINER:/opt/
