redid comments for aktin.properties

--- a/dwh-update/src/main/scripts/aktin.properties
+++ b/dwh-update/src/main/scripts/aktin.properties
@@ -60,7 +60,7 @@ cda.encounter.root.preset=1.2.276.0.76.3.87686
 cda.billing.root.preset=1.2.276.0.76.3.87686.1.45
 
 # label for the extension textfield of the consent-manager, based on the reference type.
-study.id.patient.label=Patientennummer
+study.id.patient.label=Patientennr.
 study.id.encounter.label=Episodennummer
 study.id.billing.label=Fallnummer
 
@@ -72,16 +72,10 @@ import.cda.debug.dir=/tmp/
 import.cda.debug.level=none
 import.cda.fhir.outcome.level=info
 
+# mail server via java, use configuration below 
+email.session=local
 
-
-# use only one field 'email.session' :
-
-# mail server via wildfly, uses email.config for configuration
-email.session=java:jboss/mail/AktinMailSession
-email.replyto=it-support@aktin.org
-
-# mail server via java, uses configuration below 
-# email.session=local
+# adress received mails will reply to
 mail.x.replyto=it-support@aktin.org
 
 # mail server protocol
@@ -96,13 +90,13 @@ mail.smtp.port=587
 # mail server authentification, false for "no login is needed"
 mail.smtp.auth=true
 
-# user name for authentication
+# user name for authentication (this name is displayed as addressor of every mail)
 mail.user=userforssending
 
 # password for authentication
 mail.x.password=passwordforsending
 
-#  security configuration
+# security configuration
 mail.smtp.starttls.enable=true
 
 # connection timeout
