removed email.conf from integration-test, added echos

--- a/dwh-integration-test/Dockerfile
+++ b/dwh-integration-test/Dockerfile
@@ -3,7 +3,7 @@
 
 FROM jrei/systemd-ubuntu:20.04
 #run  in console: docker run -d --privileged -p 81:80 -p 9090:9090 --tmpfs /tmp --tmpfs /run --tmpfs /run/lock -v /sys/fs/cgroup:/sys/fs/cgroup:ro <NAME>:<TAG>
-#after that: docker exec -it <ID> sh
+#after that: docker exec -it <ID> /bin/bash
 
 MAINTAINER "Alexander Kombeiz" <akombeiz@ukaachen.de>
 
