--- a/dwh-integration-test/pom.xml
+++ b/dwh-integration-test/pom.xml
@@ -6,12 +6,12 @@
 	
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-integration-test</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>1.3rc2</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>1.2-SNAPSHOT</version>
+		<version>1.3rc2</version>
 	</parent>
 
     <properties>
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.aktin.dwh</groupId>
             <artifactId>dwh-install</artifactId>
-            <version>1.2-SNAPSHOT</version>
+            <version>1.3rc2</version>
             <type>tar.gz</type>
             <exclusions>
                 <exclusion>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.aktin</groupId>
             <artifactId>demo-distribution</artifactId>
-            <version>${org.aktin.demo-distribution.version}</version>
+            <version>0.14</version>
             <type>zip</type>
         </dependency>
 	</dependencies>
