--- a/dwh-migration/pom.xml
+++ b/dwh-migration/pom.xml
@@ -6,21 +6,22 @@
 	
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-migration</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>1.3rc3-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>1.2-SNAPSHOT</version>
+		<version>1.3rc3-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.aktin.dwh</groupId>
 			<artifactId>dwh-install</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>1.3rc3-SNAPSHOT</version>
 			<type>tar.gz</type>
 			<exclusions>
+                <!-- already bundled/included with installer -->
 				<exclusion>
 					<groupId>org.aktin.dwh</groupId>
 					<artifactId>dwh-update</artifactId>
