added two new keys for the paths of uploaded data and processing scripts

--- a/dwh-update/src/main/scripts/aktin.properties
+++ b/dwh-update/src/main/scripts/aktin.properties
@@ -44,6 +44,10 @@ broker.archive.path=/var/lib/aktin/broker-archive
 broker.uris=https://aktin-broker.klinikum.rwth-aachen.de/broker/
 broker.intervals=PT15M
 
+# file import data and script paths
+import.data.path=/var/lib/aktin/import
+import.script.path=/var/lib/aktin/import-scripts
+
 # used in AKTIN to connect to the broker, you can get your API key from it-support@aktin.org
 broker.keys=XXXyourapikeyXXX
 db.datasource=java:jboss/datasources/AktinDS
