--- a/dwh-integration-test/pom.xml
+++ b/dwh-integration-test/pom.xml
@@ -6,12 +6,12 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-integration-test</artifactId>
-	<version>1.4rc1-SNAPSHOT</version>
+	<version>1.4-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>1.4rc1-SNAPSHOT</version>
+		<version>1.4-SNAPSHOT</version>
 	</parent>
 
     <properties>
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.aktin.dwh</groupId>
             <artifactId>dwh-install</artifactId>
-            <version>1.4rc1-SNAPSHOT</version>
+            <version>1.4-SNAPSHOT</version>
             <type>tar.gz</type>
             <exclusions>
                 <exclusion>
