--- a/dwh-migration/pom.xml
+++ b/dwh-migration/pom.xml
@@ -1,24 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<name>AKTIN : DWH Server : Migration</name>
-	
+
 	<packaging>pom</packaging>
-	
+
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-migration</artifactId>
-	<version>1.4-SNAPSHOT</version>
+	<version>1.4rc1-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>1.4-SNAPSHOT</version>
+		<version>1.4rc1-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.aktin.dwh</groupId>
 			<artifactId>dwh-install</artifactId>
-			<version>1.4-SNAPSHOT</version>
+			<version>1.4rc1-SNAPSHOT</version>
 			<type>tar.gz</type>
 			<exclusions>
                 <!-- already bundled/included with installer -->
@@ -29,7 +29,7 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
-    
+
 	<build>
         <plugins>
             <plugin>
