--- a/dwh-migration/pom.xml
+++ b/dwh-migration/pom.xml
@@ -6,19 +6,19 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-migration</artifactId>
-	<version>1.4rc1</version>
+	<version>1.4rc2-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>1.4rc1</version>
+		<version>1.4rc2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.aktin.dwh</groupId>
 			<artifactId>dwh-install</artifactId>
-			<version>1.4rc1</version>
+			<version>1.4rc2-SNAPSHOT</version>
 			<type>tar.gz</type>
 			<exclusions>
                 <!-- already bundled/included with installer -->
