removed RC from version and dependency

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>server</artifactId>
-	<version>1.4rc2-SNAPSHOT</version>
+	<version>1.4-SNAPSHOT</version>
 
 	<name>AKTIN : DWH Server</name>
 	<description>Installation and updates for the AKTIN DWH Server</description>
@@ -18,7 +18,7 @@
 	<properties>
 		<!-- specifies the package and source version to which the scripts and site refers to -->
 		<!-- dont forget to change dependency further down and in dwh-update/pom.xml -->
-		<dwhJ2EEVersion>1.4rc2-SNAPSHOT</dwhJ2EEVersion>
+		<dwhJ2EEVersion>1.4-SNAPSHOT</dwhJ2EEVersion>
 		<dwhOntologyVersion>0.15</dwhOntologyVersion>
 		<dwhImportVersion>0.15</dwhImportVersion>
 		<releaseRepoUrl>http://www.aktin.org/software/repo</releaseRepoUrl>
