--- a/dwh-migration/pom.xml
+++ b/dwh-migration/pom.xml
@@ -6,22 +6,22 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-migration</artifactId>
-	<version>1.4rc2-SNAPSHOT</version>
+	<version>${dwhJ2EEVersion}</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>1.4rc2-SNAPSHOT</version>
+		<version>1.4-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.aktin.dwh</groupId>
 			<artifactId>dwh-install</artifactId>
-			<version>1.4rc2-SNAPSHOT</version>
+			<version>${dwhJ2EEVersion}</version>
 			<type>tar.gz</type>
 			<exclusions>
-                <!-- already bundled/included with installer -->
+                <!-- EAR already bundled/included with installer -->
 				<exclusion>
 					<groupId>org.aktin.dwh</groupId>
 					<artifactId>dwh-update</artifactId>
