--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,13 @@
 	<parent>
 		<groupId>org.aktin</groupId>
 		<artifactId>aktin</artifactId>
-		<version>0.10</version>
+		<version>0.11</version>
 	</parent>
 
 	<properties>
 		<!-- specifies the package and source version to which the scripts and site refers to -->
 		<!-- dont forget to change dependency further down and in dwh-update/pom.xml -->
-		<dwhJ2EEVersion>1.4-SNAPSHOT</dwhJ2EEVersion>
+		<dwhJ2EEVersion>1.4</dwhJ2EEVersion>
 		<dwhOntologyVersion>0.15</dwhOntologyVersion>
 		<dwhImportVersion>0.15</dwhImportVersion>
 		<releaseRepoUrl>http://www.aktin.org/software/repo</releaseRepoUrl>
