--- a/dwh-update/pom.xml
+++ b/dwh-update/pom.xml
@@ -6,19 +6,19 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-update</artifactId>
-	<version>1.5-SNAPSHOT</version>
+	<version>${revision}</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>1.5-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.aktin.dwh</groupId>
 			<artifactId>dwh-j2ee</artifactId>
-			<version>${dwhJ2EEVersion}</version>
+			<version>${version_dwh}</version>
 			<type>ear</type>
 		</dependency>
 	</dependencies>
