--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>server</artifactId>
-	<version>1.5-SNAPSHOT</version>
+	<version>${revision}</version>
 
 	<name>AKTIN : DWH Server</name>
 	<description>Installation and updates for the AKTIN DWH Server</description>
@@ -16,13 +16,11 @@
 	</parent>
 
 	<properties>
-		<!-- specifies the package and source version to which the scripts and site refers to -->
-		<!-- dont forget to change dependency further down and in dwh-update/pom.xml -->
-		<dwhJ2EEVersion>1.4</dwhJ2EEVersion>
-		<dwhOntologyVersion>0.15</dwhOntologyVersion>
-		<dwhImportVersion>0.15</dwhImportVersion>
-		<releaseRepoUrl>http://www.aktin.org/software/repo</releaseRepoUrl>
-		<version_p21_import_script>1.1</version_p21_import_script>
+		<!-- build versions -->
+		<revision>1.5-SNAPSHOT</revision>
+		<version_dwh>1.4</version_dwh>
+		<verison_dwh_ontology>0.15</verison_dwh_ontology>
+		<version_dwh_import>0.15</version_dwh_import>
 
 		<!-- version number to use in scripts -->
 		<version_java>11</version_java>
@@ -31,13 +29,15 @@
 		<version_jdbc_driver>42.2.8</version_jdbc_driver>
 		<version_apache2>2.4.41-4ubuntu3.1</version_apache2>
 		<version_i2b2>1.7.12a</version_i2b2>
+		<version_p21_import_script>1.1</version_p21_import_script>
 
-		<!-- version number to show in install-script.vm.md -->
+		<!-- only for install-script.vm.md -->
 		<version_php>7.4.3</version_php>
 		<version_python>3.8.2</version_python>
 		<version_r>3.6.3-2</version_r>
 
-		<!-- urls for packages -->
+		<!-- urls for release and packages -->
+		<url_release_repo>http://www.aktin.org/software/repo</url_release_repo>
 		<url_i2b2_webclient>https://github.com/i2b2/i2b2-webclient/archive/v${version_i2b2}.0002.zip</url_i2b2_webclient>
 		<url_wildfly>https://download.jboss.org/wildfly/${version_wildfly}/wildfly-${version_wildfly}.zip</url_wildfly>
 		<url_jdbc_driver>https://jdbc.postgresql.org/download/postgresql-${version_jdbc_driver}.jar</url_jdbc_driver>
@@ -75,7 +75,7 @@
 			<dependency>
 				<groupId>org.aktin.dwh</groupId>
 				<artifactId>dwh-j2ee</artifactId>
-				<version>${dwhJ2EEVersion}</version>
+				<version>${version_dwh}</version>
 				<type>ear</type>
 			</dependency>
 		</dependencies>
