--- a/dwh-install/pom.xml
+++ b/dwh-install/pom.xml
@@ -6,19 +6,19 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-install</artifactId>
-	<version>${revision}</version>
+	<version>${project.parent.version}</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>${revision}</version>
+		<version>1.5-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.aktin.dwh</groupId>
 			<artifactId>dwh-update</artifactId>
-			<version>${revision}</version>
+			<version>${project.parent.version}</version>
 			<type>tar.gz</type>
 			<exclusions>
 				<!-- EAR already bundled/included with the update -->
