--- a/dwh-update/src/main/scripts/aktin.properties
+++ b/dwh-update/src/main/scripts/aktin.properties
@@ -25,6 +25,8 @@ local.language=de-DE
 
 # location of the R standalone executable
 rscript.binary=/usr/bin/Rscript
+rscript.timeout=1800000
+rscript.debug=false
 
 # needed for read/write access to the i2b2 database
 i2b2.project=AKTIN
@@ -43,6 +45,11 @@ broker.data.path=/var/lib/aktin/broker
 broker.archive.path=/var/lib/aktin/broker-archive
 broker.uris=https://aktin-broker.klinikum.rwth-aachen.de/broker/
 broker.intervals=PT15M
+
+# file import data and script paths, script processing timeout in ms
+import.data.path=/var/lib/aktin/import
+import.script.path=/var/lib/aktin/import-scripts
+import.script.timeout=10800000
 
 # used in AKTIN to connect to the broker, you can get your API key from it-support@aktin.org
 broker.keys=XXXyourapikeyXXX
