splitted newinstall script form dwh-newinstall-deb into own package

--- a/dwh-newinstall-deb/pom.xml
+++ b/dwh-newinstall-deb/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<name>AKTIN : DWH Server : Migration Debian Package</name>
+	<name>AKTIN : DWH Server : Install Debian Package</name>
 
 	<packaging>pom</packaging>
 
 	<groupId>org.aktin.dwh</groupId>
-	<artifactId>dwh-migration-deb</artifactId>
+	<artifactId>dwh-newinstall-deb</artifactId>
 	<version>${project.parent.version}</version>
 
 	<parent>
@@ -33,7 +33,7 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>aktin-dwh-migration-deb-assembly</id>
+						<id>aktin-dwh-newinstall-deb-assembly</id>
 						<phase>package</phase>
 						<goals>
 							<goal>single</goal>
